# birb

./: .dockerignore  .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  jest.config.js  make-filer-seeder.js  package-lock.json  package.json  rustfmt.toml  tsconfig.json  tslint.json  webpack.config.js
.circleci/: config.yml
crates/api/: Cargo.toml  Dockerfile  Dockerfile-prod  Dockerfile-test  Rocket.toml  test.Dockerfile
crates/api/src/: bin.rs  lib.rs  main.rs  test.rs
crates/api/src/handlers/: company.rs  filer.rs  health_check.rs  mod.rs  not_found.rs  service_not_available.rs
crates/api/src/lib/: mongo.rs
crates/api/src/meta/: company.rs  filer.rs  mod.rs  response.rs
crates/api/src/mocks/: mod.rs  mongodb.rs
crates/api/src/models/: company.rs  filer.rs  mod.rs
crates/api/src/mongo/: mod.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  store.rs
crates/app/src/state/: company_page.rs  mod.rs  msg.rs  side_nav.rs  top_nav.rs
crates/app/src/views/: contributors_view.rs  home_view.rs  mod.rs
crates/app/src/views/company_view/: mod.rs
crates/app/src/views/nav_bar_view/: mod.rs  nav_bar_item_view.rs  search_bar_view.rs
crates/app/src/views/side_nav_bar_view/: mod.rs
crates/app/src/views/top_nav_bar_view/: mod.rs  search_bar_view.rs  top_nav_bar_item_view.rs
crates/aws/: Cargo.toml
crates/birb-cli/: Cargo.toml
crates/book/: book.toml
crates/client/: Cargo.toml  build-wasm.prod.sh  build-wasm.sh
crates/company-metadata/: Cargo.toml
crates/company-metadata/src/: bin.rs  cik_to_ticker.rs  lib.rs
crates/dbslicer/: Cargo.toml
crates/dbslicer/src/: main.rs
crates/dbslicer/src/db/: mod.rs
crates/edgar-worker/: Cargo.toml  Dockerfile-prod
crates/edgar-worker/src/: bin.rs  lib.rs  main.rs
crates/filer-status/: Cargo.toml  README.md
crates/filer-status/src/: bin.rs  lib.rs
crates/filing-data/: Cargo.toml
crates/filing-data/src/: filing.rs  lib.rs  main.rs
crates/filing-metadata/: Cargo.toml  README.md
crates/filing-metadata/src/: bin.rs  download_index.rs  index_parser.rs  lib.rs  main.rs  parse_index.rs  persist_filing_metadatas.rs  should_process_for_quarter.rs  time_period_procssed_status.rs  time_periods.rs
crates/filing-parser/: .gitignore  Cargo.toml
crates/filing-parser/src/: 0001193125-18-037381.txt  0001437749-16-025027.html  excluded_companies.rs  helpers.rs  income_statement.rs  lib.rs  main.rs  master_processor.rs  split_full_submission.rs  ten_q.rs  test_files.rs  uu.rs
crates/filing-parser/src/excluded_companies/: income_statement.rs  mod.rs  sec_header.rs
crates/filing-parser/src/income_statement/: mod.rs
crates/filing-parser/src/matching_attributes/: mod.rs
crates/filing-parser/src/processing_steps/: income_statement_identifier.rs  metadata_remover.rs  mod.rs  table_accessor.rs  table_type_identifier.rs
crates/filing-parser/src/regexes/: earnings_per_share.rs  income_before_taxes.rs  income_statement.rs  income_statement_header.rs  income_statement_table.rs  interest_income.rs  mod.rs  months_ended.rs  shares_outstanding.rs  shares_used.rs  statement_of_operations.rs
crates/filing-parser/src/regexes/common/: compensation_and_benefits.rs  cost_of_goods_sold.rs  data_processing.rs  depreciation_amortization.rs  dividends_per_share.rs  earnings_per_share.rs  income_before_taxes.rs  income_from_continuing_operations.rs  income_tax_expense.rs  interest_income_or_expense.rs  legal_and_admin_fees.rs  legal_fees.rs  management_fees.rs  mod.rs  net_income.rs  net_income_controlling_interests.rs  net_income_nci.rs  non_interest_income.rs  non_interest_income_expense.rs  operating_income.rs  professional_fees.rs  provision_for_bad_debts.rs  real_estate_taxes.rs  research_and_development.rs  revenues.rs  selling_general_and_administrative.rs  shares_outstanding.rs  stock_based_compensation.rs  total_expenses.rs  trading_profit.rs
crates/filing-parser/src/regexes/earnings_per_share/: allocation_to_participating_securities.rs  mod.rs
crates/filing-parser/src/regexes/statement_of_operations/: depreciation_amortization.rs  earnings_per_share.rs  income_before_taxes.rs  income_tax_expense.rs  interest_income.rs  interest_income_or_expense.rs  mod.rs  net_income.rs  operating_expenses.rs  shares_outstanding.rs  shares_used.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/server/: Cargo.toml  Dockerfile-prod  Dockerfile-test  index.html
crates/server/src/: bin.rs  lib.rs
crates/server/src/getters/: company.rs
crates/server/src/handlers/: autocomplete_company.rs  company.rs  mod.rs
crates/server/src/meta/: filer.rs  mod.rs  response.rs
crates/server/src/models/: company.rs  filer.rs  mod.rs
crates/utils/: Cargo.toml
data/: Dockerfile
data/development/: companies.json
db/: Dockerfile.postgres
db/init/: 01-CreateFiler.sql
db/migrations/: 0001.edgar_index.down.sql  0001.edgar_index.up.sql  0001.edgar_index_table.down.sql  0001.edgar_index_table.up.sql  0001.edgar_indexes.down.sql  0001.edgar_indexes.up.sql  0001.filer_table.down.sql  0001.filer_table.up.sql  0002.company_table.up.sql  0002.filer_status_col.down.sql  (+30 more)
js/: main.tsx  setupTests.ts
scripts/: build-push-docker.sh  build.release.sh  build_and_push.sh  build_binary.sh  build_push_api.sh  build_push_edgar_worker.sh  build_push_server.sh  deploy_www.sh  download_edgar_indexes.sh  install_dev_dependencies.sh  migrate.sh  push_server.sh  push_www.sh  run.release.sh  seed.sh  start.sh  start_ssh_tunnel.sh
seed-data/: Dockerfile
server/: Cargo.toml  Dockerfile
terra/: backend.tf  main.tf  provider.tf  variables.tf
terraform/: alb.tf  auto_scaling.tf  backend.tf  bastion.tf  book_s3.tf  ecr.tf  ecs.tf  ecs_api.tf  ecs_edgar.tf  edgar_filings_s3.tf  edgar_index_s3.tf  edgar_indexes_s3.tf  edgar_permissions.tf  events.tf  lambdas.tf  logs.tf  main.tf  network.tf  outputs.tf  production.secret.tfvars.example  provider.tf  raw_filings_cdn.tf  rds.tf  roles.tf  route53.tf  secrets.tf  security.tf  spotfleet.tf  variables.tf  www.tf
tf-certificate/: certificate.tf  provider.tf  vars.tf
(+83 files in other folders)
