[package]
name = "birb"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "crates/api",
  "crates/filing-metadata",
  "crates/filer-status",
]

[dependencies]
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

