[package]
name = "birb"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "crates/server",
  "crates/birb-cli",
  "crates/filing-metadata",
  "crates/filing-data",
  "crates/edgar-worker",
  "crates/app",
  "crates/client",
  "crates/models",
]

[dependencies]
openssl-sys = "*"

[dependencies.dbmigrate-lib]
version = "0.1.4"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
default = ["postgres_support"]
postgres_support = ["dbmigrate-lib/postgres_support"]

[profile.release]
lto = true
