[package]
name = "birb"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "crates/app",
  "crates/aws",
  "crates/birb-cli",
  "crates/client",
  "crates/dbslicer",
  "crates/edgar-worker",
  "crates/filing-data",
  "crates/filing-metadata",
  "crates/filing-parser",
  "crates/models",
  "crates/server",
]

[dependencies]
openssl-sys = "*"

[dependencies.dbmigrate-lib]
version = "0.1.4"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
default = ["postgres_support"]
postgres_support = ["dbmigrate-lib/postgres_support"]

[profile.release]
lto = true
