[package]
name = "api"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
bson = "0.13.0"
serde = "1.0.89"
serde_json = "1.0"
serde_derive = "1.0.89"
mongodb = { version = "0.3.11", features = ["ssl"] }


[dependencies.rocket_contrib]
version = "0.4.0"
features = ["mongodb_pool"]
