[package]
name = "app"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"

[dependencies]
css-rs-macro = "0.1.0"
virtual-dom-rs = "0.6.9"
router-rs = "0.2.1"
log = "0.4.6"
serde = { version = "1", features = ["rc", "derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2.33", features = ["serde-serialize"] }
web-sys = "0.3.10"
js-sys = "0.3.2"
