[package]
name = "dbslicer"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.15"
postgres-derive = "0.3"

aws = { path = "../aws" }
models = { path = "../models" }
