[package]
name = "edgar-worker"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
postgres = "0.15.2"
env_logger = "0.6.1"
log = "0.4.6"

server = { path = "../server", version = "0.1.0" }
filing-data = { path = "../filing-data", version = "0.1.0" }
filing-metadata = { path = "../filing-metadata", version = "0.1.0" }

[dependencies.rocket_contrib]
version = "0.4.1"
features = ["postgres_pool"]

[[bin]]
name="edgar-worker"
path="src/bin.rs"
