[package]
name = "filer-status"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.16"
failure = "0.1.5"
html5ever = "=0.22.5"
tendril = "0.4.1"
log = "0.4.6"

api = { path = "../api", version = "0.1.0" }

[lib]
name = "filer_status_lib"
path = "src/lib.rs"

[[bin]]
name = "filer_status_bin"
path = "src/bin.rs"
