[package]
name = "filing-data"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_core = "0.40"
rusoto_s3 = "0.40"
failure = "^0.1.5"
futures = "0.1.27"
csv = "1.0.7"
serde = { version = "1.0.91", features = ["derive"] }
postgres = { version = "0.15", features = ["with-chrono"] }
postgres-derive = "0.3"
reqwest = "0.9"
log = "0.4.6"
env_logger = "0.6.1"
filing-metadata = { path = "../filing-metadata" }
aws = { path = "../aws" }
