[package]
name = "filing-metadata"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_core = "0.38.0"
rusoto_s3 = "0.38.0"
failure = "0.1.5"
futures = "0.1.27"
csv = "1.0.7"
serde = { version = "1.0.91", features = ["derive"] }
postgres = "0.15"
postgres-derive = "0.3"
