[package]
name = "filing-metadata"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_core = "0.40"
rusoto_s3 = "0.40"
failure = "0.1.5"
futures = "0.1.27"
csv = "1.0.7"
serde = { version = "1.0.91", features = ["derive"] }
log = "0.4.6"
env_logger = "0.6.1"
postgres = { version = "0.15", features = ["with-chrono"] }
chrono = { version = "0.4", features = ["serde"] }
postgres-derive = "0.3"
strum = "0.15"
strum_macros = "0.15"
lazy_static = "*"

aws = { path = "../aws" }
