[package]
name = "filing-parser"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[dependencies]
html5ever = "^0.24.0"
xml5ever = "^0.15.0"
markup5ever = "^0.9.0"
failure = "*"
tendril = "*"
regex = "*"
lazy_static = "*"
mac = "*"
rand = "*"
rayon = "*"
rusoto_s3 = "0.40"
flate2 = "1.0.11"
uuencode = "^0.1.4"
aws = { path = "../aws" }
bb = { path = "../birb-cli" }
models = { path = "../models" }
utils = { path = "../utils" }


