[package]
name = "filing-parser"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[dependencies]
html5ever = "^0.24.0"
xml5ever = "^0.15.0"
markup5ever = "^0.9.0"
failure = "^0.1.5"
tendril = "*"
regex = "*"
lazy_static = "*"
mac = "*"
rand = "*"
rayon = "*"
rusoto_core = "0.40"
rusoto_s3 = "0.40"
flate2 = "1.0.11"
uuencode = "^0.1.5"
tokio = "0.1.22"
tokio-core = "0.1.17"
num_cpus = "1.10.1"
futures = "0.1.29"
reqwest = "0.9.20"
chrono = "0.4.9"
postgres = { version = "0.15", features = ["with-chrono"] }
aws = { path = "../aws" }
bb = { path = "../birb-cli" }
models = { path = "../models" }
utils = { path = "../utils" }


