[package]
name = "models"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
postgres = { version = "0.15", features = ["with-chrono"] }
postgres-derive = "0.3"
chrono = { version = "0.4", features = ["serde"] }

