[package]
name = "server"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
serde = "1.0.91"
serde_json = "1.0"
serde_derive = "1.0.91"
postgres = "0.15.2"
dotenv = "0.14.1"
cfg-if = "0.1.9"
isomorphic-app = { path = "../app" }

[dependencies.rocket_contrib]
version = "0.4.0"
features = ["postgres_pool"]

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_bin"
path = "src/bin.rs"
